# BioGT

./: .dockerignore  .env.example  .gitignore  AGENT.md  Dockerfile  README.md  TASK_CONTEXT.md  TESTING.md  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  svgo.config.mjs  tsconfig.base.json  vitest.config.ts
apps/web/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/app/: globals 2.css  globals.css  layout.tsx  page 2.tsx  (+2 more)
docs/: MAP_PHASE_1_IMPLEMENTATION_NOTES.md  map-abstraction.md  map-data-architecture.md  map-interactions.md  map-layer-registry.md  map-provider-matrix.md  map-ui-architecture.md
docs/deployment/: map-security.md  production-checklist.md
infra/scripts/: apply-migrations.sh
scripts/: check-map-svgs.mjs  run-etl-python.sh
tests/e2e/: map-failure-states.spec.ts  map-interactions.spec.ts  map-mobile.spec.ts  map-smoke.spec.ts
tests/fixtures/: invalid.geojson  places.geojson  routes.geojson
workers/etl/: README.md  pyproject.toml
workers/etl/src/biomap_gt_etl/: __init__.py  cli.py  loader.py  media_backfill.py  normalization.py  pipeline.py  protected_area_seed.py
workers/etl/src/biomap_gt_etl.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
workers/etl/src/biomap_gt_etl/connectors/: biodiversidad_gt.py  gbif.py  geoboundaries.py
workers/etl/tests/: test_loader.py  test_loader_integration.py  test_media_backfill.py  test_media_backfill_integration.py  test_pipeline.py
workers/etl/tests/fixtures/: biodiversidad_media_search.html  biodiversidad_occurrence_detail.html
(+188 files in other folders)
