[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "biomap-gt-etl"
version = "0.1.0"
description = "ETL scaffold for BioMap Guatemala public biodiversity pipelines"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["psycopg[binary]>=3.2.9"]

[project.optional-dependencies]
dev = ["pytest>=8.4.2", "testcontainers>=4.13.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
